# myids

./: .gitignore  CMakeLists.txt  CMakeLists.txt.back  README.md  arm_linux_setup.cmake  converted_Benign.csv  converted_Dos_TCP_Flood.csv  converted_Dos_UDP_Flood.csv  flow_detection.cc  flow_detection.h  linshi.ipynb  main.cc  main.py  shm_rknn_consumer.cc  temp_script.py
FlowTransformer/: .gitignore  FlowTransformer_demo.ipynb  demonstration.ipynb  fix_encoder.py  fix_encoder_v2.py  main.py  readme.md  test_mask.py
FlowTransformer/data/: balanced_dataset_tcp_udp.csv
FlowTransformer/framework/: base_preprocessing.py  base_sequential.py  dataset_specification.py  flow_transformer.py  flow_transformer_parameters.py  model_input_specification.py  sequential_input_encoding.py
FlowTransformer/implementations/: classification_heads.py  input_encodings.py  pre_processings.py
FlowTransformer_MultiClassification_Extension/: .gitignore  LICENSE  README.md  binary_classification_demo.ipynb  export_fresh.py  extended_concepts.ipynb  main.py  multi_classification_demo.ipynb  patch_notebook.py  print_names.py  print_shapes.py  print_tt.py  test_notebook.py  test_shape.py
FlowTransformer_MultiClassification_Extension/data/: balanced_dataset.csv  stand.csv
FlowTransformer_MultiClassification_Extension/framework/: __init__.py  utilities.py  (+8 more)
config/: README  config.aligned_to_model.json  config.json
flow_collection/: flow_collection_to_csv.py  flow_collection_to_pd.py  flow_to_shm.py
includes/: shm_protocol.h
models/: my_flow_transformer.h5  t.onnx  t_multi_class.meta.json  t_multi_class.onnx  t_原生.onnx  transformer_multi_class_model.meta.json  transformer_multi_class_model.rknn
pcap/: build_dataset.py
preprocessing/: config.json  extract_preprocessor_config.py  preprocess_dataframe.py  realtime_inference.py
test/: README  compare_onnx_rknn_same_input.py  flow_collection_with_rknn_test.py  test_onnx_time.py
tools/: add_attack_label.py  balance_dataset.py  extract_preprocessor_config.py  onnx_simplifyer.py  onnx_to_rknn.py  raw_to_nfv1.py  replace_einsum.py
(+9 files in other folders)
